Starts styling dataset component

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body class="antialiased">
-  <tdp-ckan-connector site="https://plymouth.thedata.place/" apiKey="">
+  <tdp-ckan-connector site="https://plymouth.thedata.place" apiKey="">
   </tdp-ckan-connector>
 
-  <div class="tdp--container">
+  <div class="p-6">
     <section>
       <tdp-ckan-listing type="package"></tdp-ckan-listing>
     </section>
