Update connector logic, add more elements to dataset, moar styling

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="antialiased">
-  <tdp-ckan-connector site="https://plymouth.thedata.place" apiKey="">
+  <tdp-ckan-connector site="https://plymouth.thedata.place">
   </tdp-ckan-connector>
 
   <div class="p-6">
@@ -26,9 +26,6 @@
   </div>
 
   <script>
-    // http://docker.for.mac.localhost:5000
-    // a3a8f424-b2d3-414b-a9e8-36e7e4375c3
-
     // NOTE: Very temporary! PoC!
     const element = document.getElementsByTagName("tdp-ckan-dataset")[0];
 
