--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,3 +1,8 @@
 <script type="module" src="/build/tdp-ckan-web-components.esm.js"></script>
 <script nomodule src="/build/tdp-ckan-web-components.js"></script>
 <link rel="stylesheet" type="text/css" href="build/tdp-ckan-web-components.css" />
+
+<script>
+  window.td
+
+</script>
