Finish up basic storybook implementation

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,7 +2,11 @@
 <script nomodule src="/build/tdp-ckan-web-components.js"></script>
 <link rel="stylesheet" type="text/css" href="build/tdp-ckan-web-components.css" />
 
-<script>
-  window.td
 
-</script>
+<style>
+  .sb-show-main {
+    padding: 8px;
+    font-family: var(--tdp-font-primary), var(--tdp-font-secondary), 'Source Sans Pro', sans-serif;
+  }
+
+</style>
