Tweak storybook setup, use relative paths

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,12 +1,16 @@
-<script type="module" src="/build/tdp-ckan-web-components.esm.js"></script>
-<script nomodule src="/build/tdp-ckan-web-components.js"></script>
-<link rel="stylesheet" type="text/css" href="build/tdp-ckan-web-components.css" />
-
-
 <style>
   .sb-show-main {
-    padding: 8px;
-    font-family: var(--tdp-font-primary), var(--tdp-font-secondary), 'Source Sans Pro', sans-serif;
+    padding: 16px;
+    font-family: var(--tdp-font-primary), var(--tdp-font-secondary),
+      "Source Sans Pro", sans-serif;
   }
-
 </style>
+
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="./build/tdp-ckan-web-components.css"
+/>
+
+<script src="./build/tdp-ckan-web-components.esm.js" type="module"></script>
+<script src="./build/tdp-ckan-web-components.js" nomodule=""></script>
